[package]
name = "fnox"
version = "0.0.1"
authors = ["putnamjm <putnamjm.design@gmail.com>"]
edition = "2018"

[[bin]]
name = "fnox"
path = "src/main.rs"

[lib]
name = "mu"
path = "src/lib.rs"

[dependencies]
ascii = "1.0.0"
hex = "0.4.2"
memmap = "0.7.0"
nom = "5.1.2"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"